--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.22"
+    //id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.22"
     id 'jacoco'
     id "org.sonarqube" version "3.1.1"
     id "maven-publish"
@@ -16,18 +16,18 @@ repositories {
         mavenCentral()
 }
 
-dependencies {
-    testImplementation 'io.cucumber:cucumber-java:6.0.0'
-    testImplementation 'io.cucumber:cucumber-junit:6.0.0'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
+// dependencies {
+//     testImplementation 'io.cucumber:cucumber-java:6.0.0'
+//     testImplementation 'io.cucumber:cucumber-junit:6.0.0'
+//     testCompile group: 'junit', name: 'junit', version: '4.12'
+// }
 
 
-cucumberReports {
-    outputDir = file('./reports')
-    buildId = '0'
-    reports = files('./reports/example-report.json')
-}
+// cucumberReports {
+//     outputDir = file('./reports')
+//     buildId = '0'
+//     reports = files('./reports/example-report.json')
+// }
 test.finalizedBy ":sonarqube"
 
 task generateMatrixAPI(type:Copy){
