--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
     id 'java'
-    id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.22"
     id 'jacoco'
-    id "org.sonarqube" version "3.1.1"
+    //id "org.sonarqube" version "3.1.1"
     id "maven-publish"
-    id "net.madeng.slack" version "0.0.23"
 }
 apply plugin: 'maven-publish'
 group 'com.example'
@@ -23,12 +21,12 @@ dependencies {
 }
 
 
-cucumberReports {
+/*cucumberReports {
     outputDir = file('./reports')
     buildId = '0'
     reports = files('./reports/example-report.json')
 }
-test.finalizedBy ":sonarqube"
+//test.finalizedBy ":sonarqube"*/
 
 task generateMatrixAPI(type:Copy){
     from './build'
@@ -36,7 +34,6 @@ task generateMatrixAPI(type:Copy){
     into './MatrixRelease/Matrix_v_1.0'
 }
 generateMatrixAPI.dependsOn 'build'
-generateMatrixAPI.dependsOn 'javadoc'
 generateMatrixAPI.finalizedBy 'publish'
 
 group 'com.example'
@@ -59,7 +56,7 @@ publishing {
         }
     }
 }
-slack {
+/*slack {
     webhookUrl 'https://hooks.slack.com/services/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'
     message {
         text = "Project is updated!"
@@ -67,6 +64,6 @@ slack {
 
     }
 }
-publish.finalizedBy "publishToSlack"
+publish.finalizedBy "publishToSlack"*/
 
 
