--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
     id 'jacoco'
-    //id "org.sonarqube" version "3.1.1"
+    id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.22"
+    id "org.sonarqube" version "3.1.1"
     id "maven-publish"
 }
 apply plugin: 'maven-publish'
