--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'jacoco'
-    id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.22"
+    //id "com.github.spacialcircumstances.gradle-cucumber-reporting" version "0.1.22"
     id "org.sonarqube" version "3.1.1"
     id "maven-publish"
 }
@@ -21,13 +21,13 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-
+/*
 cucumberReports {
     outputDir = file('./reports')
     buildId = '0'
     reports = files('./reports/example-report.json')
 }
-test.finalizedBy ":sonarqube"
+test.finalizedBy ":sonarqube"*/
 
 task generateMatrixAPI(type:Copy){
     from './build'
